--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,14 @@ authors = ["chipbautista <chippybautista@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 SQLAlchemy = "^1.4.40"
-alembic = "^1.8.1"
+alembic = "1.6.5"
 pandas = "^1.4.3"
+dagster = "^1.0.4"
 
 
 [tool.poetry.dev-dependencies]
+black = "^22.6.0"
+ipython = "^8.4.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
