--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ SQLAlchemy = "^1.4.40"
 alembic = "1.6.5"
 pandas = "^1.4.3"
 dagster = "^1.0.4"
+dagit = "^1.0.4"
+loguru = "^0.6.0"
 
 
 [tool.poetry.dev-dependencies]
