--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pandas = "^1.4.3"
 dagster = "^1.0.4"
 dagit = "^1.0.4"
 loguru = "^0.6.0"
+streamlit = "^1.12.0"
 
 
 [tool.poetry.dev-dependencies]
