--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ dagster = "^1.0.4"
 dagit = "^1.0.4"
 loguru = "^0.6.0"
 streamlit = "^1.12.0"
+python-dotenv = "^0.21.0"
+boto3 = "^1.24.66"
 
 
 [tool.poetry.dev-dependencies]
