--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ loguru = "^0.6.0"
 streamlit = "^1.12.0"
 python-dotenv = "^0.21.0"
 boto3 = "^1.24.66"
+plotly-calplot = "^0.1.12"
 
 
 [tool.poetry.dev-dependencies]
